<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_default_local_video_size"
        android:entries="@array/pref_titles_local_video_size"
        android:entryValues="@array/pref_values_local_video_size"
        android:key="@string/local_key_video_size"
        android:negativeButtonText="@null"
        android:numeric="integer"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_video_size" />

    <ListPreference
        android:defaultValue="@string/pref_default_local_framerate"
        android:entries="@array/pref_video_framerate"
        android:entryValues="@array/pref_video_framerate"
        android:key="@string/local_key_framerate"
        android:negativeButtonText="@null"
        android:numeric="integer"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_framerate" />

    <EditTextPreference
        android:autoText="false"
        android:defaultValue="@string/pref_default_local_video_duration"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:key="@string/local_key_video_duration"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_summary_local_video_duration"
        android:title="@string/pref_title_local_video_duration" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/local_key_vibrate_and_sound"
        android:summary="@string/pref_summary_vibrate_and_sound"
        android:title="@string/pref_title_vibrate_and_sound" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/local_key_post_recorder"
        android:summary="@string/pref_summary_post_recorder"
        android:title="@string/pref_title_post_recorder" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_post_video_duration"
        android:dependency="@string/local_key_post_recorder"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:key="@string/local_key_post_video_duration"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_summary_post_video_duration"
        android:title="@string/pref_title_post_video_duration" />

</PreferenceScreen>